# storage/api-docs/api-docs.json
@@ -174,6 +174,107 @@
                     }
                 }
             },
+            "put": {
+                "tags": [
+                    "academic year"
+                ],
+                "summary": "Update a academic year",
+                "description": "Update a academic year by id",
+                "operationId": "updateAcademicYear",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "academic year ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "description": "Academic year object that needs to be updated",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "branch_id"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "type": "year",
+                                        "example": 2020
+                                    },
+                                    "branch_id": {
+                                        "type": "integer",
+                                        "example": 2
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Academic year updated successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "data": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "integer",
+                                                    "example": 1
+                                                },
+                                                "branch_id": {
+                                                    "type": "integer",
+                                                    "example": 2
+                                                },
+                                                "name": {
+                                                    "type": "year",
+                                                    "example": 2020
+                                                },
+                                                "created_at": {
+                                                    "type": "string",
+                                                    "example": "2021-05-05 12:00:00"
+                                                },
+                                                "updated_at": {
+                                                    "type": "string",
+                                                    "example": "2021-05-05 12:00:00"
+                                                },
+                                                "branch": {
+                                                    "properties": {
+                                                        "id": {
+                                                            "type": "integer",
+                                                            "example": 2
+                                                        },
+                                                        "name": {
+                                                            "type": "string",
+                                                            "example": "sub-branch"
+                                                        }
+                                                    },
+                                                    "type": "object"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
             "delete": {
                 "tags": [
                     "academic year"
@@ -207,6 +308,94 @@
                                 }
                             }
                         }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/academic_year/by_branch/{branch_id}": {
+            "get": {
+                "tags": [
+                    "academic year"
+                ],
+                "summary": "Get all academic year under one branch",
+                "operationId": "academicYearByBranch",
+                "parameters": [
+                    {
+                        "name": "branch_id",
+                        "in": "path",
+                        "description": "ID of the branch to retrieve academic years under it",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "All academic year under one branch fetched",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "id": {
+                                                        "type": "integer",
+                                                        "example": 1
+                                                    },
+                                                    "branch_id": {
+                                                        "type": "integer",
+                                                        "example": 2
+                                                    },
+                                                    "name": {
+                                                        "type": "year",
+                                                        "example": 2020
+                                                    },
+                                                    "created_at": {
+                                                        "type": "string",
+                                                        "example": "2021-05-05 12:00:00"
+                                                    },
+                                                    "updated_at": {
+                                                        "type": "string",
+                                                        "example": "2021-05-05 12:00:00"
+                                                    },
+                                                    "branch": {
+                                                        "properties": {
+                                                            "id": {
+                                                                "type": "integer",
+                                                                "example": 1
+                                                            },
+                                                            "name": {
+                                                                "type": "string",
+                                                                "example": "main-branch"
+                                                            }
+                                                        },
+                                                        "type": "object"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "204": {
+                        "description": "No academic year under this branch found"
                     }
                 },
                 "security": [
@@ -301,7 +490,6 @@
                                 "schema": {
                                     "properties": {
                                         "status": {
-                                            "description": "Response status",
                                             "type": "boolean",
                                             "example": true
                                         },
@@ -310,29 +498,24 @@
                                             "items": {
                                                 "properties": {
                                                     "id": {
-                                                        "description": "Branch ID",
                                                         "type": "integer",
-                                                        "example": "1"
+                                                        "example": 1
                                                     },
                                                     "name": {
-                                                        "description": "Branch name",
                                                         "type": "string",
                                                         "example": "Main Branch"
                                                     },
                                                     "location": {
-                                                        "description": "Branch location",
                                                         "type": "string",
                                                         "example": "Banasree"
                                                     },
                                                     "created_at": {
-                                                        "description": "Timestamp when the branch was created",
                                                         "type": "string",
-                                                        "example": "2023-02-26T10:06:25.000000Z"
+                                                        "example": "2021-05-05 12:00:00"
                                                     },
                                                     "updated_at": {
-                                                        "description": "Timestamp when the branch was last updated",
                                                         "type": "string",
-                                                        "example": "2023-02-26T10:06:25.000000Z"
+                                                        "example": "2021-05-05 12:00:00"
                                                     }
                                                 },
                                                 "type": "object"
@@ -419,7 +602,15 @@
                                                 "location": {
                                                     "description": "Branch location",
                                                     "type": "string",
-                                                    "example": "mohakhali DOHS"
+                                                    "example": "Dhaka"
+                                                },
+                                                "created_at": {
+                                                    "type": "string",
+                                                    "example": "2021-05-05 12:00:00"
+                                                },
+                                                "updated_at": {
+                                                    "type": "string",
+                                                    "example": "2021-05-05 12:00:00"
                                                 }
                                             },
                                             "type": "object"
@@ -539,6 +730,14 @@
                                                     "description": "Branch location",
                                                     "type": "string",
                                                     "example": "mohakhali DOHS"
+                                                },
+                                                "created_at": {
+                                                    "type": "string",
+                                                    "example": "2021-05-05 12:00:00"
+                                                },
+                                                "updated_at": {
+                                                    "type": "string",
+                                                    "example": "2021-05-05 12:00:00"
                                                 }
                                             },
                                             "type": "object"
@@ -638,6 +837,14 @@
                                                     "description": "Branch location",
                                                     "type": "string",
                                                     "example": "mohakhali DOHS"
+                                                },
+                                                "created_at": {
+                                                    "type": "string",
+                                                    "example": "2021-05-05 12:00:00"
+                                                },
+                                                "updated_at": {
+                                                    "type": "string",
+                                                    "example": "2021-05-05 12:00:00"
                                                 }
                                             },
                                             "type": "object"
@@ -708,9 +915,9 @@
                             "application/json": {
                                 "schema": {
                                     "properties": {
-                                        "error": {
-                                            "type": "string",
-                                            "example": "Branch not found"
+                                        "status": {
+                                            "type": "boolean",
+                                            "example": false
                                         }
                                     },
                                     "type": "object"
